--- a/index.html
+++ b/index.html
@@ -28,12 +28,14 @@
                         title: entry.title,
                         date: entry.date_ms,
                         description: entry.description,
-                        link: entry.link
+                        link: entry.link,
+                        group: group
                     };
                     msgs.push(msg);
                 }
                 var resp = {
-                  messages: msgs
+                  messages: msgs,
+                  group: group
                 }
                 app.ports.fetchedGoogleGroupMsgs.send(resp);
             }
