Better looking cards and no more inline styles

--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <script src="https://storage.googleapis.com/feednami-static/js/feednami-client-v1.0.1.js"></script>
     <script src="main.js"></script>
+    <link rel="stylesheet" type="text/css" href="main.css"/>
 </head>
 
-<body>
+<body class="main">
 </body>
 <script type="text/javascript">
     var app = Elm.Main.fullscreen();
