Added domain of where links are to

--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
                         title: entry.title,
                         date: entry.date_ms,
                         link: entry.link,
-                        tag: tag
+                        tag: tag,
+                        domain: "groups.google.com"
                     };
                     msgs.push(msg);
                 }
