Added page footer

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="main.css"/>
 </head>
 
-<body class="main">
+<body class="page">
 </body>
 <script type="text/javascript">
     var app = Elm.Main.fullscreen();
