Added a page title

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 
 <head>
+    <title>elm news</title>
     <script src="https://storage.googleapis.com/feednami-static/js/feednami-client-v1.0.1.js"></script>
     <script src="main.js"></script>
     <link rel="stylesheet" type="text/css" href="main.css" />
