--- a/index.html
+++ b/index.html
@@ -36,7 +36,34 @@
 <body class="page">
 </body>
 <script type="text/javascript">
+    (function(i, s, o, g, r, a, m) {
+        i['GoogleAnalyticsObject'] = r;
+        i[r] = i[r] || function() {
+            (i[r].q = i[r].q || []).push(arguments)
+        }, i[r].l = 1 * new Date();
+        a = s.createElement(o),
+            m = s.getElementsByTagName(o)[0];
+        a.async = 1;
+        a.src = g;
+        m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+
+    ga('create', 'UA-79825426-1', 'auto');
+    ga('send', 'pageview');
+
     var app = Elm.Main.fullscreen();
+    app.ports.registerLinkClick.subscribe(function(event) {
+        ga('send',
+            'event',
+            event.category,
+            event.action,
+            event.url, {
+                'transport': 'beacon',
+                'hitCallback': function() {
+                    document.location = event.url;
+                }
+            });
+    });
     app.ports.fetchGoogleGroupMsgs.subscribe(function(tag) {
         var url = "https://groups.google.com/forum/feed/" + tag + "/msgs/rss_v2_0.xml?num=50";
         feednami.load(url, function(result) {
