Added custom google analytics dimensions for tags and title for setup of top stories later

--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
             event.action,
             event.url, {
                 'transport': 'beacon',
+                'dimension1': event.title,
+                'dimension2': event.tag,
                 'hitCallback': function() {
                     document.location = event.url;
                 }
