Added meta descripors for SEO

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 
 <head>
     <meta charset="utf-8" />
+    <meta name="description" content="All elm news in one place">
+    <meta name="keywords" content="elm, elm lang, news">
+    <meta name="author" content="Jacob Oakes">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>elm news</title>
     <script src="https://storage.googleapis.com/feednami-static/js/feednami-client-v1.0.1.js"></script>
