--- a/index.html
+++ b/index.html
@@ -8,6 +8,39 @@
     <meta name="author" content="Jacob Oakes">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>elm news</title>
+    <script type="text/javascript">
+        /////////////////////////////////////////////////////////////////////////
+        // Single Page Apps for GitHub Pages
+        // https://github.com/rafrex/spa-github-pages
+        // Copyright (c) 2016 Rafael Pedicini, licensed under the MIT License
+        // ----------------------------------------------------------------------
+        // This script checks to see if a redirect is present in the query string
+        // and converts it back into the correct url and adds it to the
+        // browser's history using window.history.replaceState(...),
+        // which won't cause the browser to attempt to load the new url.
+        // When the single page app is loaded further down in this file,
+        // the correct url will be waiting in the browser's history for
+        // the single page app to route accordingly.
+        /////////////////////////////////////////////////////////////////////////
+        (function(l) {
+            if (l.search) {
+                var q = {};
+                l.search.slice(1).split('&').forEach(function(v) {
+                    var a = v.split('=');
+                    q[a[0]] = a.slice(1).join('=').replace(/~and~/g, '&');
+                });
+                if (q.p !== undefined) {
+                    window.history.replaceState(null, null,
+                        l.pathname.slice(0, -1) + (q.p || '') +
+                        (q.q ? ('?' + q.q) : '') +
+                        l.hash
+                    );
+                    console.log('replaced state');
+                    console.debug(window.location);
+                }
+            }
+        }(window.location))
+    </script>
     <script src="https://storage.googleapis.com/feednami-static/js/feednami-client-v1.0.1.js"></script>
     <script src="main.js"></script>
     <link rel="stylesheet" type="text/css" href="main.css" />
@@ -36,8 +69,8 @@
     <meta name="theme-color" content="#5a6378">
 </head>
 
-<body class="page">
-</body>
+<body class="page"> </body>
+
 <script type="text/javascript">
     (function(i, s, o, g, r, a, m) {
         i['GoogleAnalyticsObject'] = r;
@@ -51,7 +84,7 @@
         m.parentNode.insertBefore(a, m)
     })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
-    ga('create', 'UA-79825426-1', 'auto');
+    ga('create', 'UA-79825426-2', 'auto');
     ga('send', 'pageview');
 
     var app = Elm.Main.fullscreen();
