Added newsletter archive page to see all past newsletters

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
         }(window.location))
     </script>
     <script src="https://storage.googleapis.com/feednami-static/js/feednami-client-v1.0.1.js"></script>
-    <script src="main.js"></script>
-    <link rel="stylesheet" type="text/css" href="main.css" />
+    <script src="/main.js"></script>
+    <link rel="stylesheet" type="text/css" href="/main.css" />
     <link rel="apple-touch-icon" sizes="57x57" href="assets/images/apple-touch-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="assets/images/apple-touch-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="assets/images/apple-touch-icon-72x72.png">
@@ -84,7 +84,7 @@
         m.parentNode.insertBefore(a, m)
     })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
-    ga('create', 'UA-79825426-2', 'auto');
+    ga('create', 'UA-79825426-1', 'auto');
     ga('send', 'pageview');
 
     var app = Elm.Main.fullscreen();
