--- a/index.html
+++ b/index.html
@@ -9,6 +9,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>elm news</title>
     <script type="text/javascript">
+        (function(i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r;
+            i[r] = i[r] || function() {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date();
+            a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0];
+            a.async = 1;
+            a.src = g;
+            m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+        ga('create', 'UA-79825426-2', 'auto');
+    </script>
+    <script type="text/javascript">
+        function getQueryVariable(queryString, variable) {
+            var vars = queryString.split('&');
+            for (var i = 0; i < vars.length; i++) {
+                var pair = vars[i].split('=');
+                if (pair[0] == variable) {
+                    return pair[1];
+                }
+            }
+            return '';
+        }
         /////////////////////////////////////////////////////////////////////////
         // Single Page Apps for GitHub Pages
         // https://github.com/rafrex/spa-github-pages
@@ -30,11 +54,20 @@
                     q[a[0]] = a.slice(1).join('=').replace(/~and~/g, '&');
                 });
                 if (q.p !== undefined) {
-                    window.history.replaceState(null, null,
-                        l.pathname.slice(0, -1) + (q.p || '') +
-                        (q.q ? ('?' + q.q) : '') +
-                        l.hash
-                    );
+                    if (q.p == '/redirect') {
+                        var url = getQueryVariable(q.q, 'url');
+                        var label = getQueryVariable(q.q, 'label') || 'unknown';
+                        if (ga) {
+                          ga('send', 'event', 'email', url, label);
+                        }
+                        window.location.replace(url);
+                    } else {
+                        window.history.replaceState(null, null,
+                            l.pathname.slice(0, -1) + (q.p || '') +
+                            (q.q ? ('?' + q.q) : '') +
+                            l.hash
+                        );
+                    }
                 }
             }
         }(window.location))
@@ -70,19 +103,6 @@
 <body class="page"> </body>
 
 <script type="text/javascript">
-    (function(i, s, o, g, r, a, m) {
-        i['GoogleAnalyticsObject'] = r;
-        i[r] = i[r] || function() {
-            (i[r].q = i[r].q || []).push(arguments)
-        }, i[r].l = 1 * new Date();
-        a = s.createElement(o),
-            m = s.getElementsByTagName(o)[0];
-        a.async = 1;
-        a.src = g;
-        m.parentNode.insertBefore(a, m)
-    })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
-
-    ga('create', 'UA-79825426-1', 'auto');
     ga('send', 'pageview');
 
     var app = Elm.Main.fullscreen();
