Improved the header and changed from going to newletter signup to archives

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             'event',
             event.category,
             event.action,
-            event.url, {
+            event.label, {
                 'transport': 'beacon',
                 'dimension1': event.title,
                 'dimension2': event.tag,
