--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             a.src = g;
             m.parentNode.insertBefore(a, m)
         })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
-        ga('create', 'UA-79825426-1', 'auto');
+        ga('create', 'UA-79825426-2', 'auto');
     </script>
     <script type="text/javascript">
         function getQueryVariable(queryString, variable) {
@@ -74,6 +74,7 @@
     </script>
     <script src="https://storage.googleapis.com/feednami-static/js/feednami-client-v1.0.1.js"></script>
     <script src="/main.js"></script>
+    <link rel="stylesheet" type="text/css" href="/index.css" />
     <link rel="stylesheet" type="text/css" href="/main.css" />
     <link rel="apple-touch-icon" sizes="57x57" href="/assets/images/apple-touch-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/assets/images/apple-touch-icon-60x60.png">
